--- a/css/style.css
+++ b/css/style.css
@@ -391,6 +391,7 @@ input.fileupload {
     padding: .5rem .25rem;
     font: normal 13px/24px "open_sanssemibold";
     color: #333;
+    white-space: nowrap;
 }
 
 .innerRight .table td {
@@ -456,6 +457,7 @@ input.fileupload {
     font: normal 13px/24px "open_sanssemibold";
     color: #333;
     padding: 0.5rem 1.5rem;
+    height: 100%;
 }
 
 .resultCount {
@@ -1628,4 +1630,24 @@ footer {
 
 .reimburs-mt {
     margin-top: 2%;
+}
+.regfont{
+    font-size:14px;
+}
+.leftreg {
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    right: 15px;
+    bottom: 20px;
+}
+.leftuser {
+    position: absolute;
+    top: 15px;
+    left: 10px;
+    right: 10px;
+    bottom: 20px;
+}
+.selectline{
+    line-height: 3.15;
 }
