--- a/resources/user-assignment/view/user-assignment.html
+++ b/resources/user-assignment/view/user-assignment.html
@@ -3,7 +3,7 @@
 </nav>
 <toaster-container></toaster-container>
 <section>
-    <div class="leftContainer">
+    <div class="leftContainer leftuser">
         <div class="searchBar">
             <div class="searchBarRow">
                 <div layout-gt-sm="row">
@@ -31,13 +31,13 @@
                             <input ng-model="approvedBy">
                         </md-input-container>
                     </div>
-                    <div style="border-left: 1px solid #e6e6e6; width: 100% !important;">
+                    <div style="border-left: 1px solid #e6e6e6; width: 130% !important;">
                         <md-input-container flex-gt-sm>
                             <label style="white-space: pre-line;">Request Received From</label>
                             <md-datepicker ng-model="requestedDate" md-open-on-focus md-hide-icons="all"></md-datepicker>
                         </md-input-container>
                     </div>
-                    <div style="border-left: 1px solid #e6e6e6; width: 100% !important;">
+                    <div style="border-left: 1px solid #e6e6e6; width: 130% !important;">
                         <md-input-container flex-gt-sm>
                             <label style="white-space: pre-line;">Request Received To</label>
                             <md-datepicker ng-model="datePicker.date" md-open-on-focus md-hide-icons="all"></md-datepicker>
@@ -49,7 +49,7 @@
                             <input ng-model="assignedUser">
                         </md-input-container>
                     </div>
-                    <div class="searchColm align-middle text-center" ng-click="click();" style="width: auto !important; margin-top : 1rem!important;">
+                    <div class="searchColm align-middle text-center" ng-click="click();" style="width: 50% !important ;padding-top:10px;">
                         <a href="javascript:;" data-toggle="modal" data-target="#newRegClaims" class="searBtn mt-1 ml-3 mr-3 align-middle">
                             <span class="oi align-middle" data-glyph="magnifying-glass"></span>
                         </a>
@@ -84,29 +84,26 @@
                                     <a class="nav-link" id="Assigned" data-toggle="tab" role="tab" aria-controls="Assigned" aria-selected="false">Assigned <span class="resultCount">{{assigned.length}}</span></a>
                                 </li>
                             </ul>
-                            <div class="tab-content p-3" id="resultTabContent">
+                            <div class="tab-content " id="resultTabContent">
                                 <div class="tab-pane fade active show" ng-class="{ 'active show' : tab == 'NewRequestCount','': tab != 'NewRequestCount'}" id="NewRequest" role="tabpanel" aria-labelledby="NewRequest">
                                     <div class="row">
                                         <div class="col-sm-11">
                                             <div class="text-right">
                                                 <font size="2">sort by:</font>
-                                                <select class="custom-select innerFilterSortBy" ng-change="sorting(option)" ng-model="option">
-                                                    <option value="receivedDateDesc">By Date Asc</option>
-                                                    <option value="receivedDate">By Date Desc</option>
-                                        </select>
+                                                    <select class="custom-select innerFilterSortBy" ng-change="sorting(option)" ng-model="option">
+                                                        <option value="receivedDateDesc">By Date Asc</option>
+                                                         <option value="receivedDate">By Date Desc</option>
+                                                    </select>
                                             </div>
                                         </div>
                                         <div class="col-sm-1">
-                                            <div ng-click="selectAll()" class="align-middle"><a href="javascript:;" id="seltAll" style="font-size:60%;">Select All</a></div>
+                                            <div ng-click="selectAll()" class="align-middle selectline"><a href="javascript:;" id="seltAll" style="font-size:60%;">Select All</a></div>
                                         </div>
                                     </div>
-                                    <table class="table mt-3">
+                                    <table class="table">
                                         <tbody>
                                             <tr ng-repeat="c in claimList | orderBy:orderByField:reverseSort">
                                                 <td>
-                                                    <!-- <div class="text-nowrap">
-                                                        <strong><span><font color="black"></font><class="d-inline-block pr-2">Claim No:<a class="currencyTypeCustom d-inline-block" href="javascript:void(0);" ng-click="navigateTo();">#{{c.climeNo}}</a></span></strong> <strong><span class="d-inline-block pr-2">Member No: {{c.memberNo}}</span></strong>
-                                                    </div> -->
                                                     <div class="text-nowrap">
                                                         <span class="d-inline-block pr-2"><strong>Claim No: </strong>
                                                             <a class="currencyTypeCustom " href="javascript:void(0);"ng-click="navigateTo();">#{{c.climeNo}}</a>
@@ -161,8 +158,7 @@
                         </div>
                     </div>
                     <div class="col-3 innerRight">
-                        <h3 class="pt-3">Assign to user</h3>
-                        <!-- <input type="text" class="form-control" placeholder="Search Assigned Name" ng-model="nameAndID"> -->
+                         <h3 class="pt-3">Assign to user</h3>
                         <div class="row" style="padding:0 15px;">
                             <span style="width:5%;padding: 7px 0;"><i class="oi align-middle" data-glyph="magnifying-glass"></i></span>
                             <md-autocomplete style="width:92%" md-selected-item="selectedItem" md-search-text="searchText" md-selected-item-change="submit()" md-items="item in querySearch(searchText)" md-item-text="item.name" placeholder="UserName">
@@ -171,14 +167,14 @@
                                 </md-item-template>
                                 <md-not-found>
                                     No Result Found
-                                    <!-- No states matching "{{searchText}}" were found. -->
+                                    
                                 </md-not-found>
                             </md-autocomplete>
                         </div>
                         <table class="table mt-3">
                             <thead>
                                 <tr>
-                                    <th scope="col">User ID</th>
+                                    <th scope="col">User Id </th>
                                     <th scope="col">Name</th>
                                     <th class="text-center" scope="col">Assigned</th>
                                     <th class="text-center" scope="col">Pending</th>
@@ -202,10 +198,6 @@
                         </table>
                         <div class="align-middle text-center float-right" ng-click="assignedData()">
                             <a href="javascript:;" class="searBtn searBtnWithText"> Assign</a>
-                        </div>
-                        <!-- <span class="oi text-success" data-glyph="box" style="font-size:12px;"> &nbsp;Available&nbsp; </span>
-                        <span class="oi text-danger" data-glyph="box" style="font-size:12px;padding-left:5px"> &nbsp;Not available&nbsp; </span> -->
-                        <div>
                         </div>
                     </div>
                 </div>
