--- a/resources/registration/view/registration.html
+++ b/resources/registration/view/registration.html
@@ -41,7 +41,7 @@
                         </div>
                     </div>
                     <div class="col-5 p-0">
-                        <a href="javascript:;" class="btn btn-primary createNewBtn float-left mt-3 ml-4" ui-sref="claim-registration-general" style="float:right; padding-left:5px;">Register New Claim</a>
+                        <a href="javascript:;" class="btn btn-primary createNewBtn float-left mt-3 ml-4" ui-sref="claim-registration-general({'claim' :{}})" style="float:right; padding-left:5px;">Register New Claim</a>
                     </div>
                 </div>
             </div>
@@ -82,7 +82,7 @@
                                 </thead>
                                 <tbody>
                                     <tr ng-repeat="claim in claimTreatMent | orderBy:propertyName:reverse">
-                                        <td><a href="javascript:void(0);" ui-sref="claim-registration-general" ng-click="navigateTo();">{{claim.referenceNumber}}</a></td>
+                                        <td><a href="javascript:void(0);" ui-sref="claim-registration-general({'claim' : claim})" ng-click="navigateTo();">{{claim.referenceNumber}}</a></td>
                                         <td>{{claim.memberNumber}}</td>
                                         <td>{{claim.memberName}}</td>
                                         <td>{{claim.policyNumber}}</td>
