save and new button included in reimbursment claims processing screen

--- a/resources/reimbursement-claims/view/reimbursement-processing.html
+++ b/resources/reimbursement-claims/view/reimbursement-processing.html
@@ -320,7 +320,8 @@
                                         <!-- <a href="javascript:;" class="float-right claimReqLink mr-3 ml-3 mt-3" style="font-size: 11px;"><span class="oi" data-glyph="info"></span> Reinsurance</a>
                                         <a href="javascript:;" class="float-right claimReqLink mr-3 mt-3" style="font-size: 11px;"><span class="oi" data-glyph="info"></span> History</a>
                                         <a href="javascript:;" class="float-right claimReqLink mr-3 mt-3" style="font-size: 11px;"><span class="oi" data-glyph="info"></span> Policy Rules</a> -->
-                                        <button type="button" class="btn btn-primary btn-sm float-right ml-3 mt-3" ng-click="saveRecord();">Save</button>
+                                        <button type="button" class="btn btn-primary btn-sm float-right ml-3 mt-3" ng-click="saveRecord('OnlySave');">Save</button>
+                                        <button type="button" class="btn btn-primary btn-sm float-right ml-3 mt-3" ng-click="saveRecord('SaveAndNew');">Save & New</button>
                                         <button type="button" class="btn btn-outline-primary float-right btn-sm float-left ml-3  mt-3" ng-click="onCancel();">Cancel</button>
                                         <div class="btn-group btn-group-sm claimStatusBtns float-right" role="group" aria-label="Basic example" style="margin-top: 1rem !important;">
                                             <button type="button" class="btn btn-secondary">
