--- a/resources/registration/view/claim-search-modal.html
+++ b/resources/registration/view/claim-search-modal.html
@@ -37,7 +37,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="claim in searchedList">
+                <tr ng-repeat="claim in searchedList | limitTo:5">
                     <td>{{claim.memberName}}</td>
                     <td>{{claim.mobileNum1}}</td>
                     <td>{{claim.serviceFmDate | date:'mediumDate'}}</td>
