Registration Edit Changes..

--- a/resources/registration/view/registration-general.html
+++ b/resources/registration/view/registration-general.html
@@ -155,7 +155,7 @@
                         <button type="button" class="btn btn-outline-primary btn-sm" ng-class="{'btnSelect' : paymentWay == 'Cheque'}" ng-click="setPaymentWay('Cheque')">Cheque</button>
                     </div>
                 </div>
-                <div class="fldsWrap clearfix b0 row" ng-show="paymentWay == 'iban'">
+                <div class="fldsWrap clearfix b0 row" ng-show="paymentWay == 'IBAN'">
                     <div class="col-sm-4">
                         <div layout-gt-sm="row">
                             <div class="pb-1 iban-box">
