--- a/resources/reimbursement-claims/view/reimbursement-processing.html
+++ b/resources/reimbursement-claims/view/reimbursement-processing.html
@@ -12,7 +12,10 @@
                                 <uib-accordion-heading>
                                     <div class="p-1">
                                         <h5 class="mb-0">
-                                            <button class="btn accordionBtn">Provider Details <span class="oi" data-glyph="minus"></span></button>
+                                            <button class="btn accordionBtn">Provider Details 
+                                                <span class="oi expanded" data-glyph="minus"></span>
+                                                <span class="oi collapsed" data-glyph="plus"></span>
+                                            </button>
                                         </h5>
                                     </div>
                                 </uib-accordion-heading> 
@@ -20,19 +23,19 @@
                                     <div class="fldsWrap clearfix">
                                         <md-input-container flex-gt-sm>    
                                             <label>Primary Diagnosis</label>
-                                            <input type="text" ng-model="providerDetails.primaryDiagnosis">
+                                            <input type="text" ng-model="providerDetails.primaryDiagnosis" ng-value="'501.02'">
                                         </md-input-container>
                                     </div>
                                     <div class="fldsWrap clearfix">
                                         <md-input-container flex-gt-sm>    
-                                            <label>Primary Diagnosis Description</label>
-                                            <input type="text" ng-model="providerDetails.primaryDiagDesc">
+                                            <label>Primary Diagnosis Disc</label>
+                                            <input type="text" ng-model="providerDetails.primaryDiagDisc" ng-value="'Surgery'">
                                         </md-input-container>
                                     </div>
                                     <div class="fldsWrap clearfix">
                                         <md-input-container flex-gt-sm>    
                                             <label>Secondary Diagnosis (ICD)</label>
-                                            <input type="text" ng-model="providerDetails.secDiagnosis">
+                                            <input type="text" ng-model="providerDetails.secDiagnosis" ng-value="'301.2,508.2'">
                                         </md-input-container>
                                     </div>
                                     <div class="fldsWrap clearfix">
@@ -41,8 +44,53 @@
                                             <input type="text" ng-model="providerDetails.secDiagnosisDesc">
                                         </md-input-container>
                                     </div>
+                                    <div class="fldsWrap clearfix">
+                                        <md-input-container flex-gt-sm>    
+                                            <label>Provider Name</label>
+                                            <input type="text" ng-model="providerDetails.providerName" ng-value="'Alnoor Hospital'">
+                                        </md-input-container>
+                                    </div>
+                                    <div class="fldsWrap clearfix">
+                                        <md-input-container flex-gt-sm>    
+                                            <label>Provider Code</label>
+                                            <input type="text" ng-model="providerDetails.providerCode" ng-value="'4341'">
+                                        </md-input-container>
+                                    </div>
+                                    <div class="fldsWrap clearfix">
+                                        <md-input-container flex-gt-sm>    
+                                            <label>Provider License</label>
+                                            <input type="text" ng-model="providerDetails.providerLicense" ng-value="'MF28291'">
+                                        </md-input-container>
+                                    </div>
+                                    <div class="fldsWrap clearfix">
+                                        <md-input-container flex-gt-sm>    
+                                            <label>Voucher Number</label>
+                                            <input type="text" ng-model="providerDetails.voucherNumber">
+                                        </md-input-container>
+                                    </div>
+                                    <div class="fldsWrap clearfix">
+                                        <md-input-container flex-gt-sm>    
+                                            <label>Encounter Type</label>
+                                            <input type="text" ng-model="providerDetails.providerNetwork" ng-value="'Inpatient'">
+                                        </md-input-container>
+                                    </div>
+                                    <div class="fldsWrap clearfix">
+                                        <md-input-container flex-gt-sm>    
+                                            <label>Claim Type</label>
+                                            <input type="text" ng-model="providerDetails.claimType" ng-value="'Elective'">
+                                        </md-input-container>
+                                    </div>
+                                    <div ng-show="showProviderMore">
+                                        <div class="fldsWrap clearfix">
+                                            <md-input-container flex-gt-sm>    
+                                                <label>Provider Network</label>
+                                                <input type="text" ng-model="providerDetails.providerNetwork" ng-value="'P,S,G'" ng-disabled="true">
+                                            </md-input-container>
+                                        </div>
+                                    </div>
                                 </div>
-                                <a href="javascript:;" class="btn-link moreBtn">More...</a>
+                                <a href="javascript:;" class="btn-link moreBtn" ng-show="!showProviderMore" ng-click="showProviderMore=!showProviderMore">More...</a>
+                                <a href="javascript:;" class="btn-link moreBtn" ng-show="showProviderMore" ng-click="showProviderMore=!showProviderMore">Few...</a>
                             </div>
                         </div>
                         <div uib-accordion-group class="panel-default">
@@ -50,7 +98,10 @@
                                 <uib-accordion-heading>
                                     <div class="p-1">
                                         <h5 class="mb-0">
-                                            <button class="btn accordionBtn">Policy Details <span class="oi" data-glyph="plus"></span></button>
+                                            <button class="btn accordionBtn">Policy Details
+                                                <span class="oi expanded" data-glyph="minus"></span>
+                                                <span class="oi collapsed" data-glyph="plus"></span>
+                                            </button>
                                         </h5>
                                     </div>
                                 </uib-accordion-heading>
@@ -64,11 +115,38 @@
                                     <div class="fldsWrap clearfix">
                                         <md-input-container flex-gt-sm>    
                                             <label>Claim Condition</label>
-                                            <input type="text" ng-model="policyDetails.claimCondition">
+                                            <input type="text" ng-model="policyDetails.claimCondition" ng-value="'Special Case/Ex-Gratia'">
                                         </md-input-container>
                                     </div>
+                                    <div ng-show="showPolicyMore">
+                                        <div class="fldsWrap clearfix">
+                                            <md-input-container flex-gt-sm>    
+                                                <label>Policy No/Renewal No</label>
+                                                <input type="text" ng-model="policyDetails.policyNumber" ng-value="'515621'" ng-disabled="true">
+                                            </md-input-container>
+                                        </div>
+                                        <div class="fldsWrap clearfix">
+                                            <md-input-container flex-gt-sm>    
+                                                <label>Policy Name</label>
+                                                <input type="text" ng-model="policyDetails.policyName" ng-value="'Medic Policy'" ng-disabled="true">
+                                            </md-input-container>
+                                        </div>
+                                        <div class="fldsWrap clearfix">
+                                            <md-input-container flex-gt-sm>    
+                                                <label>Policy Start</label>
+                                                <md-datepicker ng-model="policyDetails.policyStart" md-hide-icons="all" md-open-on-focus ng-disabled="true"></md-datepicker>
+                                            </md-input-container>
+                                        </div>
+                                        <div class="fldsWrap clearfix">
+                                            <md-input-container flex-gt-sm>    
+                                                <label>Claim Paid To</label>
+                                                <input type="text" ng-model="policyDetails.claimPaidTo" ng-value="'Principle Member/Customer'"  ng-disabled="true">
+                                            </md-input-container>
+                                        </div>
+                                    </div>
                                 </div>
-                                <a href="javascript:;" class="btn-link moreBtn">More...</a>
+                                <a href="javascript:;" class="btn-link moreBtn" ng-show="!showPolicyMore" ng-click="showPolicyMore=!showPolicyMore">More...</a>
+                                <a href="javascript:;" class="btn-link moreBtn" ng-show="showPolicyMore" ng-click="showPolicyMore=!showPolicyMore">Few...</a>
                             </div>
                         </div>
                         <div uib-accordion-group class="panel-default">
@@ -76,44 +154,80 @@
                                 <uib-accordion-heading>
                                     <div class="p-1">
                                         <h5 class="mb-0">
-                                            <button class="btn accordionBtn">Member Details <span class="oi" data-glyph="plus"></span></button>
+                                            <button class="btn accordionBtn">Member Details 
+                                                <span class="oi expanded" data-glyph="minus"></span>
+                                                <span class="oi collapsed" data-glyph="plus"></span>
+                                            </button>
                                         </h5>
                                     </div>
                                 </uib-accordion-heading>
                                 <div class="accordion-input">
                                     <div class="fldsWrap clearfix">
                                         <md-input-container flex-gt-sm>    
-                                            <label>Primary Diagnosis</label>
-                                            <input type="text" ng-model="memberDetails.primaryDiagnosis" ng-value="'Stomach Pain'">
+                                            <label>Member Name</label>
+                                            <input type="text" ng-model="memberDetails.memberName" ng-value="'Khalifa'" ng-disabled="true">
                                         </md-input-container>
                                     </div>
                                     <div class="fldsWrap clearfix">
                                         <md-input-container flex-gt-sm>    
-                                            <label>Primary Diagnosis Description</label>
-                                            <input type="text" ng-model="memberDetails.primaryDiagDesc">
+                                            <label>Member No</label>
+                                            <input type="text" ng-model="memberDetails.memberNo" ng-value="'500001-1-A'" ng-disabled="true">
                                         </md-input-container>
                                     </div>
                                     <div class="fldsWrap clearfix">
                                         <md-input-container flex-gt-sm>    
-                                            <label>Secondary Diagnosis (ICD)</label>
-                                            <input type="text" ng-model="memberDetails.secDiagnosis">
+                                            <label>Category</label>
+                                            <input type="text" ng-model="memberDetails.category" ng-value="'B'" ng-disabled="true">
                                         </md-input-container>
                                     </div>
                                     <div class="fldsWrap clearfix">
                                         <md-input-container flex-gt-sm>    
-                                            <label>Secondary Diagnosis Description</label>
-                                            <input type="text" ng-model="memberDetails.secDiagnosisDesc">
+                                            <label>Gender</label>
+                                            <input type="text" ng-model="memberDetails.gender" ng-value="'Male'" ng-disabled="true">
                                         </md-input-container>
+                                    </div>
+                                    <div ng-show="showMemberMore">
+                                        <div class="fldsWrap clearfix">
+                                            <md-input-container flex-gt-sm>    
+                                                <label>Age</label>
+                                                <input type="text" ng-model="memberDetails.age" ng-value="'52'" ng-disabled="true">
+                                            </md-input-container>
+                                        </div>
+                                        <div class="fldsWrap clearfix">
+                                            <md-input-container flex-gt-sm>    
+                                                <label>Member Network</label>
+                                                <input type="text" ng-model="memberDetails.memberNetwork" ng-value="'P'" ng-disabled="true">
+                                            </md-input-container>
+                                        </div>
+                                        <div class="fldsWrap clearfix">
+                                            <md-input-container flex-gt-sm>    
+                                                <label>Member Terminated Date</label>
+                                                <md-datepicker ng-model="memberDetails.memberTerminatedDate" md-hide-icons="all" md-open-on-focus></md-datepicker>
+                                            </md-input-container>
+                                        </div>
+                                        <div class="fldsWrap clearfix">
+                                            <md-input-container flex-gt-sm>    
+                                                <label>Member Start Date</label>
+                                                <md-datepicker ng-model="memberDetails.memberStartDate" md-hide-icons="all" md-open-on-focus></md-datepicker>
+                                            </md-input-container>
+                                        </div>
+                                        <div class="fldsWrap clearfix">
+                                            <md-input-container flex-gt-sm>    
+                                                <label>Dependency/Relation</label>
+                                                <input type="text" ng-model="memberDetails.dependencyOrRelation" ng-value="'Principle Member'" ng-disabled="true">
+                                            </md-input-container>
+                                        </div>
                                     </div>
                                 </div>
-                                <a href="javascript:;" class="btn-link moreBtn">More...</a>
+                                <a href="javascript:;" class="btn-link moreBtn" ng-show="!showMemberMore" ng-click="showMemberMore=!showMemberMore">More...</a>
+                                <a href="javascript:;" class="btn-link moreBtn" ng-show="showMemberMore" ng-click="showMemberMore=!showMemberMore">Few...</a>
                             </div>
                         </div>    
                     </uib-accordion>
                 </div>                
             </div>
             <div class="rightContentPart float-right pr-0 pb-3">
-                <a href="javascript:;" class="infoToggleBtn" ng-class="{'infoToggleBtnToggled' : infoToggle}" ng-click="infoToggle = !infoToggle" ng-style="{'margin-left' : !infoToggle ? '12px' : '0px'}"><span class="oi" data-glyph="arrow-left"></span> <br />info</a>
+                <a href="javascript:;" class="infoToggleBtn" ng-class="{'infoToggleBtnToggled' : infoToggle}" ng-click="infoToggle = !infoToggle" ng-style="{'margin-left' : !infoToggle ? '12px' : '0px'}"><span class="oi" data-glyph="arrow-right"></span> <br />info</a>
                 <div class="row col-sm-12">
                     <div class="infoList clearfix  col-sm-7">
                         <li>
