--- a/resources/reimbursement-claims/view/reimbursement-processing.html
+++ b/resources/reimbursement-claims/view/reimbursement-processing.html
@@ -272,11 +272,31 @@
                             </carousel-next>
                         </ui-carousel>
                     </div>
-                    <div class="col-sm-2">
-                        <div class="medicalCardInfoBox medicalCardInfoBoxShow" id="medicalCardInfoBox" ng-class="{'medicalCardInfoBoxShow' : !infoToggle}">
+                    <div class="col-sm-2 medicalwid">
+                        <div class="medicalCardInfoBox medicalCardInfoBoxShow medicalhgt" id="medicalCardInfoBox" ng-class="{'medicalCardInfoBoxShow' : !infoToggle}">
                             <h3>Medical card info</h3>
                             <ul>
-                                <li>
+                              <li>
+                                <span>Age:</span>
+                                <span>20</span>
+                              </li>  
+                             <li>
+                                <span>Gender:</span>
+                                <span>Female</span>
+                             </li>  
+                             <li>
+                                <span>Marital Status:</span>
+                                <span>Single</span>
+                             </li>  
+                             <li>
+                               <span>Member Network:</span>
+                               <span>AEM</span>
+                             </li> 
+                             <li>
+                               <span>Policy Name:</span>
+                               <span>HTS</span>
+                             </li> 
+                               <li>
                                     <span>Inpatient: </span>
                                     <span>Nil</span>
                                 </li>   
